[package]
authors     = ["Daniel Santana <danielgsantana@gmail.com>"]
description = "A simple crate to make easy to use JsValue in a thread-safe way, when Send and Sync are not implemented."
edition     = "2021"
name        = "thread_safe_jsvalue"
version     = "0.1.0"

[dependencies]
paste        = { version = "1.0", optional = true }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["macro"]
macro   = ["dep:paste"]
